# stuff

./: .gitignore  Cargo.toml  README.md
ZTasks/: README.md
ZTasks/backend/: Cargo.toml
ZTasks/backend/src/: main.rs
ZTasks/frontend/: package-lock.json  package.json
aoc2023/: Cargo.toml
big-chungus-binary/: Cargo.toml
big-chungus-binary/src/: main.rs
binrw-test/: .gitignore  Cargo.toml  sample.toml
binrw-test/src/: main.rs
dialogue-test/: .gitignore  Cargo.toml
dialogue-test/src/: main.rs
generate-nginx-subdomains/: .gitignore  Cargo.toml  generate
generate-nginx-subdomains/src/: main.rs
godot-unpacker/: .gitignore  Cargo.toml
godot-unpacker/src/: main.rs
p4g-battle-renamer/: .env.example  Cargo.toml
p4g-battle-renamer/src/: main.rs
simple-live-notepad/: .prettierignore  index.js  package-lock.json  package.json  prettier.config.js
simple-live-notepad/public/: index.html  script.js  style.css
ssbu-reslotter/: Cargo.toml  README.md
ssbu-reslotter/src/: main.rs
tera-test/: Cargo.toml
tera-test/pages/: a.njk  index.html
tera-test/pages/sub/: asdf.html
tera-test/src/: main.rs  template_builder.rs
yawgi/: Cargo.toml
yawgi/meta/: systemd.txt  wg0.conf  yawgi.service
yawgi/src/: main.rs
yaytdlg/: Cargo.toml
yaytdlg/src/: main.rs
zlink/: Cargo.toml  README.md
zlink/src/: main.rs
zlink/src/database/: mod.rs
zlink/src/database/sql/: 0.sql
